# GoatCalendar

./: .gitignore  README.md  docker-compose.yml  sonar-project.properties
.github/workflows/: workflow.yaml
back/auth_service/: main.py  pyproject.toml
back/auth_service/src/auth_service/repositories/: user_repository.py
back/auth_service/src/auth_service/routes/: authentication_route.py  monitoring_route.py  user_route.py
back/auth_service/src/auth_service/services/: authentication_service.py  user_service.py
back/auth_service/src/auth_service/utils/: hash.py  jwt.py
back/auth_service/tests/: conftest.py  constants.py  test_auth_routes.py  test_auth_services.py  test_auth_utils.py  test_user_repository.py
back/board_service/: main.py  pyproject.toml
back/board_service/src/board_service/repositories/: board_repository.py  board_row_repository.py
back/board_service/src/board_service/routes/: __init__.py  board_column_route.py  board_event_route.py  board_permission_route.py  board_route.py  board_row_comment_route.py  board_row_route.py  board_row_task_route.py  monitoring_route.py
back/board_service/src/board_service/services/: board_row_service.py  board_service.py  exceptions.py
back/board_service/tests/: conftest.py  constants.py  test_board_repositories.py  test_board_routes.py  test_board_service.py
back/calendar_service/: main.py  pyproject.toml
back/calendar_service/src/calendar_service/routes/: monitoring_route.py
back/database_service/: main.py  pyproject.toml
back/database_service/src/database_service/: database.py  seeder.py
back/database_service/tests/: conftest.py  test_database.py  test_main.py  test_seeder.py
back/shared_models/: pyproject.toml
back/shared_models/src/shared_models/: enums.py
back/shared_models/src/shared_models/dtos/: __init__.py  board_column_in_dto.py  board_column_out_dto.py  board_event_in_dto.py  board_event_out_dto.py  board_in_dtos.py  board_out_dto.py  board_permission_in_dto.py  board_permission_out_dto.py  board_row_comment_in_dto.py  board_row_comment_out_dto.py  board_row_in_dtos.py  board_row_out_dto.py  board_row_task_in_dto.py  board_row_task_out_dto.py  user_auth_dto.py  user_dtos.py  user_out_dto.py  user_search_query_dto.py
back/shared_models/src/shared_models/exceptions/: __init__.py  concurrency_exception.py
back/shared_models/src/shared_models/models/: auth_settings.py  db_connection_settings.py  jwt_tokens.py  server_health.py  server_settings.py
back/shared_models/src/shared_models/schemas/: __init__.py  board.py  board_columns.py  board_event.py  board_row.py  board_row_comment.py  board_row_task.py  board_task_comment.py  user.py  user_board_relation.py
back/shared_models/tests/: test_dtos.py  test_schemas_and_enums.py  test_settings.py
front/: board.html  dashboard.html  index.html
front/scripts/: api.js  app_shell.js  config.js  dom.js  session.js
front/scripts/pages/: board.js  dashboard.js  login.js
front/styles/: art_direction.css  boards.css  buttons.css  forms.css  layout.css  main.css  tables.css
production/: Dockerfile.AuthService  Dockerfile.BoardService  Dockerfile.DatabaseService  Dockerfile.FrontService
report/: README.md  rapport.tex
report/diagrams/: architecture.mmd  ci_pipeline.mmd  data_model.mmd  deployment.mmd  layers.mmd
