[project]
name = "goat-calendar-database-service"
version = "0.3.0"
description = "Default template for PDM package"
authors = [
    {name = "GoatsSoftware", email = "antonin.durand576@gmail.com"},
]
dependencies = ["sqlmodel>=0.0.38", "aiomysql>=0.3.2", "cryptography>=48.0.0"]
requires-python = ">=3.13"
readme = "./README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "ruff>=0.15.15",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
]
prod = [
    "goat-calendar-shared-models",
]

[dependency-groups]
dev = [
    "goat-calendar-shared-models @ file:///${PROJECT_ROOT}/../shared_models",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/database_service"]

[tool.pdm.scripts]
ruff_lint = "ruff check --fix"
ruff_format = "ruff format"
ruff_all = {composite = ["ruff_format", "ruff_lint"]}
seed_database = "python main.py"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",
    "D212",
    "D205",
    "D203",
    "FIX002",
    "TD002",
    "TD003",
    "PIE796",
    "G004",
    "D401", # First line of docstring should be in imperative mood
    "D104", # Missing docstring in public package
    "D100", # Missing docstring in public module
    "TRY003", # Avoid specifying long messages outside the exception class
    "EM101", # Exception must not use a string literal, assign to variable first,
    "FAST001", # FastAPI route with redundant `response_model` argument
    "COM812", # Conflicts with the Ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN001",
    "ANN002",
    "ANN202",
    "ANN204",
    "D105",
    "D107",
    "D101",
    "D102",
    "D103",
    "PLR2004",
    "S101",
]
